[FIX] Fixed dark mode view css

--- a/addons/web_flectra/static/src/scss/style.scss
+++ b/addons/web_flectra/static/src/scss/style.scss
@@ -290,13 +290,13 @@ textarea, select, .o_form_view.o_form_editable .o_form_field_many2manytags,
 }
 
 .o_searchview:focus-within{
-    border-color: #9c9c9c;
-    border: 1px solid #ddd !important;
-    border-radius: 3px !important;
+    //border-color: #9c9c9c;
+    //border: 1px solid #ddd !important;
+    //border-radius: 3px !important;
 }
 
 .o_searchview:focus-within + .o-dropdown .o_searchview_dropdown_toggler{
-    border-color :#ddd !important;
+    //border-color :#ddd !important;
 }
 
 
